--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -22,6 +22,9 @@ jobs:
       with:
         node-version: 14
     
+    - name: Upgrade NPM
+      run: npm install -g npm
+
     - name: Install NPM packages
       run: npm ci
     
