--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "starwiki",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://francescodesimone.github.io/starwiki/",
   "dependencies": {
     "@mui/material": "^5.0.6",
     "@testing-library/jest-dom": "^5.11.4",
