--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -26,7 +26,7 @@ jobs:
       run: npm install -g npm
 
     - name: Install NPM packages
-      run: npm ci
+      run: npm i
     
     - name: Build project
       run: npm run build
