--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         ]
     },
     "devDependencies": {
-        "@types/react-swipeable-views": "^0.13.1"
+        "@types/react-swipeable-views": "^0.13.1",
+        "@types/uuid": "^8.3.1"
     }
 }
