--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
-        "axios": "^0.24.0",
         "cors": "^2.8.5",
         "duckduckgo-images-api": "^1.0.5",
         "react": "^17.0.2",
@@ -49,6 +48,7 @@
         ]
     },
     "devDependencies": {
+        "@types/duckduckgo-images-api": "^1.0.1",
         "@types/react-swipeable-views": "^0.13.1",
         "@types/uuid": "^8.3.1"
     }
