--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/react-dom": "^17.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-infinite-scroll-component": "^6.1.0",
         "react-scripts": "4.0.3",
         "react-swipeable-views": "^0.14.0",
         "typescript": "^4.1.2",
