--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
+        "@mui/icons-material": "^5.1.0",
         "@mui/material": "^5.0.6",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
@@ -17,6 +18,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-infinite-scroll-component": "^6.1.0",
+        "react-router-dom": "^6.0.2",
         "react-scripts": "4.0.3",
         "react-swipeable-views": "^0.14.0",
         "typescript": "^4.1.2",
