Use hashroute for githubpages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "starwiki",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://francescodesimone.github.io/starwiki/",
+    "homepage": "https://francescodesimone.github.io/starwiki",
     "dependencies": {
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
